1999-06-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Collection.m (indexAtOffset): Adjust loop logic to avoid
	negative numbers.

	* List_GEN.m ([TINDEX -setOffset:]): Likewise.

	* Permutation.[hm] ([PermutationItem_c -setPosition:],
	[PermutationItem_c -getPosition]): Make position unsigned.

	* Collection.m (indexAtOffset): Make offset unsigned.

	* Array.[hm], Collection.[hm] ([Array_c -atOffset:], [Array_c
	-atOffset:put:]): Make offset unsigned.
	([ArrayIndex_c -setOffset:]): Likewise.

	* List_GEN.m ([TINDEX -setOffset:]): Likewise.

	* Set.m ([SetIndex_c -setOffset:]): Likewise.

	* collections.h: Reflect these changes.

1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* List.m (setListClass): Don't use string manipulation to
	get next phase; use nextPhase.

	* Map.m ([Map_c -createIndex:fromMember:]): Use a componentZone for
	listIndex.

1999-06-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* List.m (setListClass): Fix off by one error in computing name
	for using-phase-lookup-by-string.  Use buffer on stack instead of heap.

1999-06-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (BUILT_SOURCES): Use TYPEINFO.
	(module_headers): Remove.

1999-06-08  Alex Lancaster  <alex@santafe.edu>

	* collections.h (ArchiverPair): Add -{set,get}ConsFormatFlag
	method to protocol.

	* InputStream.m ([ArchiverList_c -lispOutDeep:]): Handle
	cons_literal_p, list_literal_p cases.  Also handle the custom
	PARSE_FUNCTION_NAME case in place of the usual
	MAKE_{INSTANCE,CLASS}_FUNCTION_NAME.
	(lisp_output_one_of_pair): Remove function, no longer required.
	([ArchiverPair_c -lispOutDeep:]): Reorganize to use lispOutDeep
	directly on {car,cdr} elements, use consFormatFlag to choose
	between output formats.
	([InputStream_c -getExpr]): When creating ArchiverPair instance,
	set consFormatFlag based on the original text file format.
	
	* InputStream.[hm] ([ArchiverPair_c
	-{set,get}ConsFormatFlag:]): New methods and instance variable for