@@ -1,3 +1,7 @@
+1999-06-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Set.[hm] ([Set_c -getCount]): New method.
+
 1999-06-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Collection.m (indexAtOffset): Adjust loop logic to avoid
